# rs-s3-sync

./: Cargo.toml  LICENSE  README.md
src/: main.rs
