[package]
name = "s3-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
aws-config = "1.1.6"
aws-sdk-s3 = "1.16.0"
dirs = "5.0.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
toml = "0.8.10"
walkdir = "2.4.0"
